// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileRow should render with regular slots 1`] = `
<tr>
  <td class="v-data-table__mobile-row">
    <div class="v-data-table__mobile-row__wrapper">
      <div class="v-data-table__mobile-row__header">
        Petrol
      </div>
      <div class="v-data-table__mobile-row__cell">
        <p class="test">
          $0.68
        </p>
      </div>
    </div>
  </td>
  <td class="v-data-table__mobile-row">
    <div class="v-data-table__mobile-row__wrapper">
      <div class="v-data-table__mobile-row__header">
        Diesel
      </div>
      <div class="v-data-table__mobile-row__cell">
        <p class="test">
          $0.65
        </p>
      </div>
    </div>
  </td>
</tr>
`;

exports[`MobileRow should render with scoped slots 1`] = `
<tr>
  <td class="v-data-table__mobile-row">
    <div class="v-data-table__mobile-row__wrapper">
      <div class="v-data-table__mobile-row__header">
        Petrol
      </div>
      <div class="v-data-table__mobile-row__cell">
        <p class="test petrol">
          0.68
        </p>
      </div>
    </div>
  </td>
  <td class="v-data-table__mobile-row">
    <div class="v-data-table__mobile-row__wrapper">
      <div class="v-data-table__mobile-row__header">
        Diesel
      </div>
      <div class="v-data-table__mobile-row__cell">
        <p class="test diesel">
          0.65
        </p>
      </div>
    </div>
  </td>
</tr>
`;

exports[`MobileRow should render without slots 1`] = `
<tr>
  <td class="v-data-table__mobile-row">
    <div class="v-data-table__mobile-row__wrapper">
      <div class="v-data-table__mobile-row__header">
        Petrol
      </div>
      <div class="v-data-table__mobile-row__cell">
        0.68
      </div>
    </div>
  </td>
  <td class="v-data-table__mobile-row">
    <div class="v-data-table__mobile-row__wrapper">
      <div class="v-data-table__mobile-row__header">
        Diesel
      </div>
      <div class="v-data-table__mobile-row__cell">
        0.65
      </div>
    </div>
  </td>
</tr>
`;
